--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.3",
+    "antd": "^3.23.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "history": "^4.10.1",
